[package]
name = "sui-by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
sha2 = "0.10.8"

[[bin]]
name = "01_read_latest_checkpoint"
path = "src/01_read_latest_checkpoint/bin/main.rs"

[[bin]]
name = "02_read_latest_object"
path = "src/02_read_latest_object/bin/main.rs"

[[bin]]
name = "03_simple_transaction"
path = "src/03_simple_transaction/bin/main.rs"

[[bin]]
name = "04_shared_object_transaction"
path = "src/04_shared_object_transaction/bin/main.rs"

[[bin]]
name = "05_reading_events"
path = "src/05_reading_events/bin/main.rs"

[[bin]]
name = "06_clock"
path = "src/06_clock/bin/main.rs"